--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,22 @@
   font-family: "Open Sans", sans-serif;
 }
 
+body::-webkit-scrollbar {
+  transition: 0.5s all;
+  -webkit-appearance: none;
+  width: 2px;
+  top: 0;
+  right: 0;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+body::-webkit-scrollbar-track {
+  background: #ddd;
+}
+
 .container {
   max-width: 1300px;
   padding-left: 10px;
