--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,7 +1,99 @@
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://media.istockphoto.com/id/1414981473/photo/futuristic-flight-through-a-digital-line-landscape-blue-dust-particle-abstract-background-3d.webp?b=1&s=170667a&w=0&k=20&c=nR3IdRbSFibEagWhoCRY_d-WyEJJSv0BLcIsmJJYN5M="),
+  background: url("https://www.backhousemedia.com/wp-content/uploads/2017/05/Website-design-BG.jpg"),
     no-repeat;
   background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 92%, 0% 100%);
+}
+
+#hero .hero-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80vh;
+}
+
+#hero .hero-txt {
+  width: 40%;
+}
+
+#hero .icons {
+  display: flex;
+  margin-top: 20px;
+}
+
+#hero .icon {
+  color: #fff;
+  font-size: 25px;
+  margin-right: 30px;
+  background: radial-gradient(circle, #30f 0, #00ccff 100%);
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+
+#hero h2 {
+  font-size: 30px;
+  color: #fff;
+  letter-spacing: 1.2px;
+}
+
+#hero p {
+  color: #fff;
+  font-size: 18px;
+}
+
+#hero h1 {
+  background: radial-gradient(circle, rgb(0, 81, 255) 0, #00e1ff 100%);
+  color: transparent;
+  background-clip: text;
+  letter-spacing: 1.2px;
+  -webkit-background-clip: text;
+  margin: 5px 0;
+  font-size: 35px;
+}
+
+#hero .hero-img {
+  width: 50%;
+  display: flex;
+  justify-content: end;
+  padding-right: 80px;
+}
+
+#hero .image-card {
+  border: 5px solid #fff;
+  padding: 0 15px 0 5px;
+  border-radius: 50% 50% 0 0;
+  background: #00000031;
+  backdrop-filter: blur("20px");
+}
+
+@media (max-width: 1022px) {
+  #hero {
+    height: auto !important;
+  }
+  #hero .hero-row {
+    display: block;
+    height: auto;
+    padding: 40px 0;
+  }
+
+  .hero-txt {
+    width: 100% !important;
+    display: flex !important;
+    justify-content: center !important;
+    text-align: center;
+  }
+
+  .hero-txt .icons {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero-img {
+    width: 100% !important;
+    justify-content: center !important;
+    padding-right: 0 !important;
+    margin: 40px 0;
+  }
 }
