skills are almost ready

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   font-family: "Open Sans", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body::-webkit-scrollbar {
   transition: 0.5s all;
   -webkit-appearance: none;
