--- a/src/pages/skills/skill.css
+++ b/src/pages/skills/skill.css
@@ -15,12 +15,22 @@
 
 .slick-slider .slick-next {
   right: 0 !important;
-  position: absolute !important;
-  background-color: transparent !important;
+  z-index: 99999999999999 !important;
 }
+
+.slick-slider .slick-prev::before {
+  font-size: 30px !important;
+  width: 40px !important;
+  height: 40px !important;
+}
+
+.slick-slider .slick-next::before {
+  font-size: 30px !important;
+  width: 40px !important;
+  height: 40px !important;
+}
+
 .slick-slider .slick-prev {
-  left: 0;
-  font-size: 20px !important;
-  position: absolute !important;
-  background-color: transparent !important;
+  left: 0 !important;
+  z-index: 99999999999999 !important;
 }
