--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,3 +1,11 @@
+#about {
+  background: url("https://www.fev3r.com/assets/images/Pattern-3.png"),
+    no-repeat;
+  background-size: cover;
+
+  padding-bottom: 50px;
+}
+
 .about-img-card {
   text-align: center;
 }
@@ -7,11 +15,22 @@
 }
 
 .about-img-card img {
-  height: 400px;
+  height: 450px;
   width: 80%;
   object-fit: cover;
   border-radius: 50px;
   object-position: right;
+}
+
+.about-text-card p {
+  font-size: 18px;
+  font-weight: 400;
+  letter-spacing: 1.3px;
+}
+
+.about-txt-title {
+  font-size: 35px !important;
+  letter-spacing: 1.8px;
 }
 
 @media (max-width: 1020px) {
