--- a/src/pages/hero/hero.css
+++ b/src/pages/hero/hero.css
@@ -1,8 +1,9 @@
 #hero {
   width: 100%;
-  height: 100vh;
   background: url("../../images/bg.jpg"), repeat;
-  clip-path: polygon(0 0, 100% 0, 100% 92%, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+  overflow: hidden !important;
+  padding-bottom: 250px !important;
 }
 
 #hero .hero-row {
@@ -78,6 +79,37 @@
   transform: scale(1.13);
 }
 
+.me-text-container {
+  position: absolute;
+  top: 90vh;
+}
+
+.me-text {
+  position: relative;
+  margin: 0px;
+  color: white;
+  font-size: 100px;
+  font-weight: 500;
+  padding-right: 50px;
+}
+
+.me-text p {
+  white-space: nowrap;
+  position: relative;
+  margin: 0px;
+  color: white;
+  font-size: 100px !important;
+  letter-spacing: 10px;
+  font-weight: 500;
+  padding-right: 50px;
+}
+
+.me-text p:nth-of-type(2) {
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
+
 @media (max-width: 1022px) {
   #hero {
     height: auto !important;
@@ -114,5 +146,8 @@
     justify-content: center !important;
     padding-right: 0 !important;
     margin: 40px 0;
+  }
+  .me-text-container {
+    top: 110vh;
   }
 }
