contact and footer coming soon

--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -34,31 +34,110 @@
 
 .portfolio-skills {
   display: flex;
-  gap: 15px;
+  flex-wrap: wrap;
+  column-gap: 15px;
+  row-gap: 5px;
 }
 
 .portfolio-skills p:nth-of-type(1) {
-  color: #ff5602;
+  color: #ff0202;
 }
 
 .portfolio-skills p:nth-of-type(2) {
-  color: #024eff;
+  color: #1b02ff;
 }
 
 .portfolio-skills p:nth-of-type(3) {
-  color: #ddff02;
+  color: yellow;
 }
 
 .portfolio-skills p:nth-of-type(4) {
-  color: #0296ff;
+  color: #ff02c0;
 }
 
 .portfolio-skills p:nth-of-type(5) {
-  color: #ff2c02;
+  color: #09ff00;
 }
 
-.portfolio-skills p:nth-of-type(6) {
-  color: #f2ff02;
+.c-button {
+  color: #000;
+  font-weight: 600;
+  letter-spacing: 1.4px;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 0.4em 1.6em;
+  width: 100%;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+
+.c-button svg {
+  fill: #1c69f9;
+}
+
+.c-button:hover .c-button .svg {
+  fill: #fff !important;
+}
+
+.c-button--gooey {
+  color: #1c69f9;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border: 2px solid #1c69f9;
+  border-radius: 0;
+  position: relative;
+  transition: all 700ms ease;
+}
+
+.c-button--gooey .c-button__blobs {
+  height: 100%;
+  filter: url(#goo);
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: -3px;
+  right: -1px;
+  z-index: -1;
+}
+
+.c-button--gooey .c-button__blobs div {
+  background-color: #1c69f9;
+  width: 34%;
+  height: 100%;
+  border-radius: 100%;
+  position: absolute;
+  transform: scale(1.4) translateY(125%) translateZ(0);
+  transition: all 700ms ease;
+}
+
+.c-button--gooey .c-button__blobs div:nth-child(1) {
+  left: -5%;
+}
+
+.c-button--gooey .c-button__blobs div:nth-child(2) {
+  left: 30%;
+  transition-delay: 60ms;
+}
+
+.c-button--gooey .c-button__blobs div:nth-child(3) {
+  left: 66%;
+  transition-delay: 25ms;
+}
+
+.c-button--gooey:hover {
+  color: #fff;
+}
+.c-button--gooey:hover * {
+  fill: #fff !important;
+}
+
+.c-button--gooey:hover .c-button__blobs div {
+  transform: scale(1.4) translateY(0) translateZ(0);
 }
 
 @media (max-width: 920px) {
