--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -2,7 +2,7 @@ header {
   position: fixed;
   transition: 0.3s all;
   background: transparent;
-  z-index: 9999;
+  z-index: 999999999999999 !important;
   color: #fff !important;
   width: 100%;
   padding: 30px 0 !important;
@@ -10,6 +10,7 @@ header {
 
 .navbar-shrink {
   transition: 0.3s all;
+  z-index: 999999999999999 !important;
   padding: 20px 0 !important;
   background: #00000072;
   backdrop-filter: blur(25px);
@@ -19,6 +20,7 @@ header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 999999999999999 !important;
 }
 
 header .logo h1 {
