--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -20,7 +20,7 @@
   height: 450px;
   width: 80%;
   object-fit: cover;
-  object-position: top !important;
+  object-position: right !important;
   border-radius: 50px;
 }
 
